  * fix standalone.py server root deployments (--script-alias='')
  * add rudimentary Basic authentication support to standalone.py (issue #49)
  * fix obscure "unexpected NULL parent pool" Subversion bindings error
  * enable path info / link display in remote Subversion root revision view
  * fix vhost name case handling inconsistency (issue #466)

Version 1.1.6 (released 02-Jun-2010)

  * add rudimentary support for WSGI-based deployments (issue #397)
  * fix exception caused by trying to HTML-escape non-string data (issue #454)
  * fix incorrect RSS feed Content-Type header (issue #449)
  * fix RSS <title> encoding problem (issue #451)
  * allow 'svndbadmin purge' to work on missing repositories (issue #452)

Version 1.1.5 (released 29-Mar-2010)

  * security fix: escape user-provided search_re input to avoid XSS attack

Version 1.1.4 (released 10-Mar-2010)

  * security fix: escape user-provided query form input to avoid XSS attack
  * fix standalone.py failure (when per-root options aren't used) (issue #445)
  * fix annotate failure caused by ignored svn_config_dir (issue #447)

Version 1.1.3 (released 22-Dec-2009)

  * security fix: add root listing support of per-root authz config
  * security fix: query.py requires 'forbidden' authorizer (or none) in config
  * fix URL-ification of truncated log messages (issue #3)
  * fix regexp input validation (issue #426, #427, #440)
  * add support for configurable tab-to-spaces conversion
  * fix not-a-sequence error in diff view
  * allow viewvc-install to work when templates-contrib is absent
  * minor template improvements/corrections
  * expose revision metadata in diff view (issue #431)
  * markup file/directory item property URLs and email addresses (issue #434)
  * make ViewVC cross copies in Subversion history by default
  * fix bug that caused standalone.py failure under Python 1.5.2 (issue #442)
  * fix support for per-vhost overrides of authorizer parameters (issue #411)